...
        StatusBar.setBackgroundColor(Colors.TRANSPARENT, true)
    }

  }, [])

  return (
    <View testID='track-screen' style={styles.root}>

      <View style={styles.container}>
        <Image source={{ uri: params.playlist.picture }} style={styles.playlistImage} />
        <LinearGradient
          colors={[ Colors.TRANSPARENT, Colors.FullShade]}
          style={styles.translucentConteiner}
...
